# maddy

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md  appveyor.yml
.clusterfuzzlite/: Dockerfile  build.sh  parser_fuzzer.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: cpp-bug-report.yml  markdown-bug-report.yml  other.yml
.github/workflows/: cflite_pr.yml  create-release-package.yml  run-checks.yml  run-tests.yml  update-dependencies.yml
bench/: CMakeLists.txt  README.md  benchmark_test.md  main.cpp
cmake/: maddyConfig.cmake.in
docs/: definitions.md
include/maddy/: blockparser.h  breaklineparser.h  checklistparser.h  codeblockparser.h  emphasizedparser.h  headlineparser.h  horizontallineparser.h  htmlparser.h  imageparser.h  inlinecodeparser.h  italicparser.h  latexblockparser.h  lineparser.h  linkparser.h  orderedlistparser.h  paragraphparser.h  parser.h  parserconfig.h  quoteparser.h  strikethroughparser.h  strongparser.h  tableparser.h  unorderedlistparser.h
libs/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/cmake/find_package/: CMakeLists.txt  main.cpp
tests/maddy/: test_maddy_breaklineparser.cpp  test_maddy_checklistparser.cpp  test_maddy_codeblockparser.cpp  test_maddy_emphasizedparser.cpp  test_maddy_headlineparser.cpp  test_maddy_horizontallineparser.cpp  test_maddy_htmlparser.cpp  test_maddy_imageparser.cpp  test_maddy_inlinecodeparser.cpp  test_maddy_italicparser.cpp  test_maddy_latexblockparser.cpp  test_maddy_linkparser.cpp  test_maddy_orderedlistparser.cpp  test_maddy_paragraphparser.cpp  test_maddy_parser.cpp  test_maddy_parser.h  test_maddy_quoteparser.cpp  test_maddy_strikethroughparser.cpp  test_maddy_strongparser.cpp  test_maddy_tableparser.cpp  test_maddy_unorderedlistparser.cpp
tools/: Pipfile  format.py  update_dependencies.py  update_version.py
